ingress-controller/test-ingress-controller/kubia-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      serviceAccountName: dev-service-account
      containers:
      - image: luksa/kubia:v1
        name: nodejs
